--- a/sass/modals.scss
+++ b/sass/modals.scss
@@ -196,7 +196,9 @@
 					}
 
 					.a-createacc{
-						margin-bottom: 20px;
+						position: relative;
+						top: 50px;
+						bottom: 0;
 						width: 100%;
 						text-align: center;
 					}
