--- a/css/modals.css
+++ b/css/modals.css
@@ -1,147 +1,156 @@
-.modal .modal-dialog {
-  margin-top: 0;
-  position: relative;
-  width: 100%;
-  pointer-events: none; }
-.modal .modal.fade .modal-dialog {
-  transition: -webkit-transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, 0%);
-  transform: translate(0, 0%); }
-.modal .center .modal-content {
-  box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5);
-  border-radius: 10%;
-  font-family: sans;
-  background-color: #1f1f2c; }
-  .modal .center .modal-content .X-close {
-    color: white;
-    font-size: 30px;
-    padding: 20px;
-    position: absolute;
-    z-index: 1;
-    outline: none;
-    right: 20px; }
-  .modal .center .modal-content .modal-body {
-    margin-top: 30px;
-    color: white; }
-    .modal .center .modal-content .modal-body .form {
-      background-color: transparent;
-      display: grid;
-      padding: 120px 80px; }
-      .modal .center .modal-content .modal-body .form .div-inp-name {
-        position: relative; }
-        .modal .center .modal-content .modal-body .form .div-inp-name .fa {
+.modal {
+  background-color: rgba(0, 0, 0, 0.66); }
+  .modal .modal-dialog {
+    margin-top: 10px;
+    position: relative;
+    width: 100%;
+    pointer-events: none; }
+  .modal .modal.fade .modal-dialog {
+    transition: -webkit-transform 0.3s ease-out;
+    transition: transform 0.3s ease-out;
+    transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    -webkit-transform: translate(0, 0%);
+    transform: translate(0, 0%); }
+  .modal .center .modal-content {
+    box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5);
+    border-radius: 10%;
+    font-family: sans;
+    background-color: #1f1f2c; }
+    .modal .center .modal-content .X-close {
+      color: white;
+      font-size: 30px;
+      padding: 20px;
+      position: absolute;
+      z-index: 1;
+      outline: none;
+      right: 20px; }
+    .modal .center .modal-content .modal-body {
+      margin-top: 30px;
+      color: white; }
+      .modal .center .modal-content .modal-body .form {
+        background-color: transparent;
+        display: grid;
+        padding: 120px 80px; }
+        .modal .center .modal-content .modal-body .form .div-inp-name {
+          position: relative; }
+          .modal .center .modal-content .modal-body .form .div-inp-name .fa {
+            color: white;
+            position: absolute;
+            padding: 10px;
+            top: 5px;
+            pointer-events: none; }
+          .modal .center .modal-content .modal-body .form .div-inp-name .left-addon .fa {
+            left: 0px; }
+          .modal .center .modal-content .modal-body .form .div-inp-name .inp-name {
+            background-color: transparent;
+            padding: 10px 15px;
+            margin-bottom: 10px;
+            width: 100%;
+            padding-left: 30px;
+            border-radius: 2px;
+            border: none;
+            color: gray;
+            border-bottom: 1px solid white; }
+          .modal .center .modal-content .modal-body .form .div-inp-name .inp-name:focus {
+            outline: none;
+            background-color: white;
+            transition: .4s linear 0.2s; }
+          .modal .center .modal-content .modal-body .form .div-inp-name #label-name-alert {
+            display: none; }
+          .modal .center .modal-content .modal-body .form .div-inp-name #label-email-alert {
+            display: none; }
+        .modal .center .modal-content .modal-body .form .div-inp-pass {
+          position: relative; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass .fa {
+            color: white;
+            position: absolute;
+            padding: 10px;
+            pointer-events: none;
+            top: 5px; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass .left-addon .fa {
+            left: 0px; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass .inp-pass {
+            background-color: transparent;
+            padding: 10px 15px;
+            width: 100%;
+            padding-left: 30px;
+            border-radius: 2px;
+            border: none;
+            color: gray;
+            border-bottom: 1px solid white;
+            margin-bottom: 10px; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass .inp-confirmpass {
+            background-color: transparent;
+            padding: 10px 15px;
+            width: 100%;
+            padding-left: 30px;
+            border-radius: 2px;
+            border: none;
+            color: gray;
+            border-bottom: 1px solid white;
+            margin-bottom: 10px; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass .inp-pass:focus, .modal .center .modal-content .modal-body .form .div-inp-pass .inp-confirmpass:focus {
+            outline: none;
+            background-color: white;
+            transition: .4s linear 0.2s; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass #label-pass-alert {
+            display: none; }
+          .modal .center .modal-content .modal-body .form .div-inp-pass #label-confirmpass-alert {
+            display: none; }
+        .modal .center .modal-content .modal-body .form .form-btn .btn-login {
+          padding: 10px 20px;
+          border: 3px solid #5fa941;
+          background-color: #5fa941;
+          cursor: pointer;
+          transition: .4s linear 0.2s;
+          width: 100%;
+          display: inline-block;
+          text-align: center;
+          margin-top: 50px;
+          border-radius: 50px;
+          color: white; }
+        .modal .center .modal-content .modal-body .form .form-btn .btn-login:hover {
+          opacity: .92; }
+        .modal .center .modal-content .modal-body .form .form-btn .btn-login:focus {
+          outline: none; }
+        .modal .center .modal-content .modal-body .form .social-btn {
+          display: flex;
+          margin-top: 40px; }
+          .modal .center .modal-content .modal-body .form .social-btn .btn-facebook {
+            outline: none;
+            width: 50%;
+            border: none;
+            border-radius: 50px;
+            background-color: #3949AB;
+            font-size: 16px;
+            color: white;
+            padding: 15px 20px; }
+          .modal .center .modal-content .modal-body .form .social-btn a {
+            color: white;
+            text-decoration: none; }
+          .modal .center .modal-content .modal-body .form .social-btn .btn-google {
+            outline: none;
+            margin-left: 5px;
+            border: none;
+            border-radius: 50px;
+            background-color: #ea4335;
+            color: white;
+            font-size: 16px;
+            padding: 15px 20px;
+            width: 50%; }
+        .modal .center .modal-content .modal-body .form .a-createacc {
           color: white;
-          position: absolute;
           padding: 10px;
-          top: 5px;
-          pointer-events: none; }
-        .modal .center .modal-content .modal-body .form .div-inp-name .left-addon .fa {
-          left: 0px; }
-        .modal .center .modal-content .modal-body .form .div-inp-name .inp-name {
-          background-color: transparent;
-          padding: 10px 15px;
-          margin-bottom: 10px;
-          width: 100%;
-          padding-left: 30px;
-          border-radius: 2px;
-          border: none;
-          color: gray;
-          border-bottom: 1px solid white; }
-        .modal .center .modal-content .modal-body .form .div-inp-name .inp-name:focus {
-          outline: none;
-          background-color: white;
-          transition: .4s linear 0.2s; }
-        .modal .center .modal-content .modal-body .form .div-inp-name #label-name-alert {
-          display: none; }
-        .modal .center .modal-content .modal-body .form .div-inp-name #label-email-alert {
-          display: none; }
-      .modal .center .modal-content .modal-body .form .div-inp-pass {
-        position: relative; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass .fa {
-          color: white;
-          position: absolute;
-          padding: 10px;
-          pointer-events: none;
-          top: 5px; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass .left-addon .fa {
-          left: 0px; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass .inp-pass {
-          background-color: transparent;
-          padding: 10px 15px;
-          width: 100%;
-          padding-left: 30px;
-          border-radius: 2px;
-          border: none;
-          color: gray;
-          border-bottom: 1px solid white;
-          margin-bottom: 10px; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass .inp-confirmpass {
-          background-color: transparent;
-          padding: 10px 15px;
-          width: 100%;
-          padding-left: 30px;
-          border-radius: 2px;
-          border: none;
-          color: gray;
-          border-bottom: 1px solid white;
-          margin-bottom: 10px; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass .inp-pass:focus, .modal .center .modal-content .modal-body .form .div-inp-pass .inp-confirmpass:focus {
-          outline: none;
-          background-color: white;
-          transition: .4s linear 0.2s; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass #label-pass-alert {
-          display: none; }
-        .modal .center .modal-content .modal-body .form .div-inp-pass #label-confirmpass-alert {
-          display: none; }
-      .modal .center .modal-content .modal-body .form .form-btn .btn-login {
-        padding: 10px 20px;
-        border: 3px solid #5fa941;
-        background-color: #5fa941;
-        cursor: pointer;
-        transition: .4s linear 0.2s;
-        width: 100%;
-        display: inline-block;
-        text-align: center;
-        margin-top: 50px;
-        border-radius: 50px;
-        color: white; }
-      .modal .center .modal-content .modal-body .form .form-btn .btn-login:hover {
-        opacity: .92; }
-      .modal .center .modal-content .modal-body .form .form-btn .btn-login:focus {
-        outline: none; }
-      .modal .center .modal-content .modal-body .form .social-btn {
-        display: flex;
-        margin-top: 40px; }
-        .modal .center .modal-content .modal-body .form .social-btn .btn-facebook {
-          outline: none;
+          font-size: 15px;
+          background: #B71C1C;
+          border-radius: 5px;
+          position: relative;
+          left: 50%;
+          transform: translateX(-50%);
+          top: 40px;
+          bottom: 0;
           width: 50%;
-          border: none;
-          border-radius: 50px;
-          background-color: #3949AB;
-          font-size: 16px;
-          color: white;
-          padding: 15px 20px; }
-        .modal .center .modal-content .modal-body .form .social-btn a {
-          color: white;
-          text-decoration: none; }
-        .modal .center .modal-content .modal-body .form .social-btn .btn-google {
-          outline: none;
-          margin-left: 5px;
-          border: none;
-          border-radius: 50px;
-          background-color: #ea4335;
-          color: white;
-          font-size: 16px;
-          padding: 15px 20px;
-          width: 50%; }
-      .modal .center .modal-content .modal-body .form .a-createacc {
-        position: relative;
-        top: 50px;
-        bottom: 0;
-        width: 100%;
-        text-align: center; }
+          text-align: center; }
 
 @media screen and (max-width: 500px) {
   .form {
