--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -8,15 +8,31 @@
 	box-shadow: 0px 1px 20px 1px rgba(0,0,0,0.50);
 
 	.navbar{
-
-		.collapse{
+		
+		.navbar-collapse{
 			
 			.form-inline{
 				
 				.input{
-					box-shadow: 0px 2px 20px 1px rgba(0,0,0,0.50);
+					box-shadow: 0px 1px 20px 1px rgba(0,0,0,0.20);
+				}
+
+				#all-btn{
+					margin-left: 100px;
+				}
+			}
+
+			ul{
+				li{
+					a{
+						color: black;
+					}
 				}
 			}
 		}
 	}
+}
+
+.item-config{
+	background-color: rgba(32,32,32,0.5);
 }
