--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,10 @@
   background-size: cover;
   height: 436px; }
   .header .contenedor .flex {
-    display: flex; }
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center; }
     .header .contenedor .flex .btn-flex {
       display: flex;
       margin-left: 15px; }
@@ -40,6 +43,25 @@
         box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5);
         border: none;
         border-left: 3px solid rgba(255, 255, 255, 0.64); }
+    .header .contenedor .flex button {
+      padding: 20px;
+      margin-top: 50px;
+      width: 100%;
+      background-color: #f0351d;
+      color: white;
+      border: none;
+      border-left: 3px solid rgba(255, 255, 255, 0.64);
+      border-right: 3px solid rgba(255, 255, 255, 0.64);
+      outline: none;
+      cursor: pointer;
+      box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.56); }
+      .header .contenedor .flex button label {
+        font-family: Arial;
+        text-transform: uppercase;
+        font-size: 18px;
+        cursor: pointer; }
+    .header .contenedor .flex button:hover, .header .contenedor .flex label:hover {
+      background-color: #f0350d; }
   .header .contenedor .skew-box {
     position: absolute;
     height: 436px;
@@ -62,25 +84,6 @@
       font-size: 2.8em;
       font-weight: bold;
       font-family: Arial; }
-    .header .contenedor .text-cont button {
-      padding: 20px;
-      margin-top: 50px;
-      width: 100%;
-      background-color: #f0351d;
-      color: white;
-      border: none;
-      border-left: 3px solid rgba(255, 255, 255, 0.64);
-      border-right: 3px solid rgba(255, 255, 255, 0.64);
-      outline: none;
-      cursor: pointer;
-      box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.56); }
-      .header .contenedor .text-cont button label {
-        font-family: Arial;
-        text-transform: uppercase;
-        font-size: 18px;
-        cursor: pointer; }
-    .header .contenedor .text-cont button:hover, .header .contenedor .text-cont label:hover {
-      background-color: #f0350d; }
 
 @media screen and (max-width: 800px) {
   .header .contenedor .skew-box {
@@ -93,7 +96,6 @@
     position: relative;
     color: black;
     transform: skew(-20deg);
-    left: 15%;
     top: 20px;
     display: grid;
     align-items: end;
@@ -101,12 +103,11 @@
     .header .contenedor .text-cont span {
       background-color: white;
       font-size: 2em; }
-    .header .contenedor .text-cont button {
-      position: relative;
-      padding: 5px;
-      width: 100%; }
-      .header .contenedor .text-cont button label {
-        font-size: 0.8em; } }
+    .header .contenedor .text-cont .read-more {
+      display: none; }
+  .header .contenedor .flex .btn-flex {
+    position: relative;
+    bottom: 30px; } }
 @media screen and (min-width: 801px) {
   .header .contenedor .skew-box {
     position: absolute;
