--- a/css/import.css
+++ b/css/import.css
@@ -1,13 +1,37 @@
-* {
-  padding: 0;
-  margin: 0; }
+.nav-top {
+  background-color: black;
+  color: black;
+  text-align: center; }
+  .nav-top .marvel-logo {
+    width: 100%; }
+
+.neightbor {
+  font-family: sans;
+  position: relative;
+  width: 100%;
+  outline: none;
+  background-color: white;
+  color: black;
+  box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5); }
+  .neightbor .navbar .navbar-collapse .form-inline .input {
+    box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.2); }
+  .neightbor .navbar .navbar-collapse .form-inline #all-btn {
+    margin-left: 100px; }
+  .neightbor .navbar .navbar-collapse ul li a {
+    color: black; }
+
+.item-config {
+  background-color: rgba(32, 32, 32, 0.5); }
 
 .header {
   background: url("../img/fondo.jpg") no-repeat center center;
   background-size: cover;
   height: 436px; }
   .header .contenedor .flex {
-    display: flex; }
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center; }
     .header .contenedor .flex .btn-flex {
       display: flex;
       margin-left: 15px; }
@@ -44,6 +68,25 @@
         box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5);
         border: none;
         border-left: 3px solid rgba(255, 255, 255, 0.64); }
+    .header .contenedor .flex button {
+      padding: 20px;
+      margin-top: 50px;
+      width: 100%;
+      background-color: #f0351d;
+      color: white;
+      border: none;
+      border-left: 3px solid rgba(255, 255, 255, 0.64);
+      border-right: 3px solid rgba(255, 255, 255, 0.64);
+      outline: none;
+      cursor: pointer;
+      box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.56); }
+      .header .contenedor .flex button label {
+        font-family: Arial;
+        text-transform: uppercase;
+        font-size: 18px;
+        cursor: pointer; }
+    .header .contenedor .flex button:hover, .header .contenedor .flex label:hover {
+      background-color: #f0350d; }
   .header .contenedor .skew-box {
     position: absolute;
     height: 436px;
@@ -66,25 +109,6 @@
       font-size: 2.8em;
       font-weight: bold;
       font-family: Arial; }
-    .header .contenedor .text-cont button {
-      padding: 20px;
-      margin-top: 50px;
-      width: 100%;
-      background-color: #f0351d;
-      color: white;
-      border: none;
-      border-left: 3px solid rgba(255, 255, 255, 0.64);
-      border-right: 3px solid rgba(255, 255, 255, 0.64);
-      outline: none;
-      cursor: pointer;
-      box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.56); }
-      .header .contenedor .text-cont button label {
-        font-family: Arial;
-        text-transform: uppercase;
-        font-size: 18px;
-        cursor: pointer; }
-    .header .contenedor .text-cont button:hover, .header .contenedor .text-cont label:hover {
-      background-color: #f0350d; }
 
 @media screen and (max-width: 800px) {
   .header .contenedor .skew-box {
@@ -97,7 +121,6 @@
     position: relative;
     color: black;
     transform: skew(-20deg);
-    left: 15%;
     top: 20px;
     display: grid;
     align-items: end;
@@ -105,12 +128,11 @@
     .header .contenedor .text-cont span {
       background-color: white;
       font-size: 2em; }
-    .header .contenedor .text-cont button {
-      position: relative;
-      padding: 5px;
-      width: 100%; }
-      .header .contenedor .text-cont button label {
-        font-size: 0.8em; } }
+    .header .contenedor .text-cont .read-more {
+      display: none; }
+  .header .contenedor .flex .btn-flex {
+    position: relative;
+    bottom: 30px; } }
 @media screen and (min-width: 801px) {
   .header .contenedor .skew-box {
     position: absolute;
@@ -186,6 +208,35 @@
       width: 50%; }
       .header .contenedor .text-cont button label {
         font-size: 1em; } }
+.container-fluid {
+  width: 100%;
+  text-align: center;
+  display: grid;
+  justify-content: center; }
+  .container-fluid .padding {
+    padding: 30px; }
+    .container-fluid .padding .margin-top h2 {
+      font-size: 30px; }
+
+@media screen and (min-width: 575px) {
+  .container-fluid .padding .margin-top h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 28px; } }
+@media screen and (min-width: 760px) {
+  .container-fluid .padding .margin-top h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 28px; }
+  .container-fluid .padding .margin-top #welcome-h2 {
+    position: relative; }
+  .container-fluid .padding .margin-top #responsive-h2 {
+    position: relative; } }
+@media screen and (min-width: 771px) {
+  .container-fluid .padding .margin-top h2 {
+    font-size: 30px; } }
 @font-face {
   font-family: "Avengeance";
   font-style: normal;
@@ -241,29 +292,10 @@
     margin-top: 20px; }
   100% {
     margin-top: 20px; } }
-.nav-top {
-  background-color: black;
-  color: black;
-  text-align: center; }
-  .nav-top .marvel-logo {
-    width: 100%; }
-
-.neightbor {
-  font-family: sans;
-  position: relative;
-  width: 100%;
-  outline: none;
-  background-color: white;
-  color: black;
-  box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5); }
-  .neightbor .navbar .collapse .form-inline .input {
-    box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.5); }
-
 .modal {
   background-color: rgba(0, 0, 0, 0.66); }
   .modal .modal-dialog {
     margin-top: 10px;
-    position: relative;
     width: 100%;
     pointer-events: none; }
   .modal .modal.fade .modal-dialog {
@@ -274,7 +306,6 @@
     transform: translate(0, 0%); }
   .modal .center .modal-content {
     box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 10%;
     font-family: sans;
     background-color: #1f1f2c; }
     .modal .center .modal-content .X-close {
@@ -288,10 +319,13 @@
     .modal .center .modal-content .modal-body {
       margin-top: 30px;
       color: white; }
+      .modal .center .modal-content .modal-body .welcome-admin {
+        position: absolute;
+        top: 0; }
       .modal .center .modal-content .modal-body .form {
         background-color: transparent;
         display: grid;
-        padding: 120px 80px; }
+        padding: 50px 50px; }
         .modal .center .modal-content .modal-body .form .div-inp-name {
           position: relative; }
           .modal .center .modal-content .modal-body .form .div-inp-name .fa {
@@ -358,6 +392,40 @@
             display: none; }
           .modal .center .modal-content .modal-body .form .div-inp-pass #label-confirmpass-alert {
             display: none; }
+        .modal .center .modal-content .modal-body .form .div-checkbox {
+          padding: 10px 10px 0px 10px;
+          text-align: center; }
+        .modal .center .modal-content .modal-body .form .div-checkbox input[type="checkbox"] {
+          display: none; }
+        .modal .center .modal-content .modal-body .form .div-checkbox label {
+          padding: 5px 15px 5px 51px;
+          display: inline-block;
+          position: relative;
+          font-size: .8em;
+          border-radius: 3px;
+          cursor: pointer;
+          text-align: center;
+          -webkit-transition: all .4s ease;
+          -o-transition: all .4s ease;
+          transition: all .4s ease; }
+        .modal .center .modal-content .modal-body .form .div-checkbox label:hover {
+          background-color: rgba(0, 116, 217, 0.2); }
+        .modal .center .modal-content .modal-body .form .div-checkbox label:before {
+          content: "";
+          width: 17px;
+          height: 17px;
+          background-color: none;
+          display: inline-block;
+          border: 3px solid #5fa941;
+          border-radius: 4px;
+          position: absolute;
+          left: 17px; }
+        .modal .center .modal-content .modal-body .form .div-checkbox input[type="checkbox"]:checked + label {
+          padding: 5px 15px;
+          background-color: #5fa941;
+          color: white; }
+        .modal .center .modal-content .modal-body .form .div-checkbox input[type="checkbox"]:checked + label:before {
+          display: none; }
         .modal .center .modal-content .modal-body .form .form-btn .btn-login {
           padding: 10px 20px;
           border: 3px solid #5fa941;
@@ -379,9 +447,8 @@
           margin-top: 40px; }
           .modal .center .modal-content .modal-body .form .social-btn .btn-facebook {
             outline: none;
-            width: 50%;
+            width: 100%;
             border: none;
-            border-radius: 50px;
             background-color: #3949AB;
             font-size: 16px;
             color: white;
@@ -391,14 +458,12 @@
             text-decoration: none; }
           .modal .center .modal-content .modal-body .form .social-btn .btn-google {
             outline: none;
-            margin-left: 5px;
             border: none;
-            border-radius: 50px;
             background-color: #ea4335;
             color: white;
             font-size: 16px;
             padding: 15px 20px;
-            width: 50%; }
+            width: 100%; }
         .modal .center .modal-content .modal-body .form .a-createacc {
           color: white;
           padding: 10px;
@@ -413,20 +478,114 @@
           width: 50%;
           text-align: center; }
 
-@media screen and (max-width: 500px) {
-  .form {
-    padding: 0; } }
-.mostrar {
-  display: block; }
+#container-search {
+  text-align: center; }
 
-.container-fluid {
+.a-config {
+  display: inline-block;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 0px 20px;
+  border-bottom: 1px solid white;
+  color: white;
+  text-decoration: none; }
+
+.a-config:hover {
+  color: white;
+  text-decoration: none; }
+
+.img-config {
+  display: block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 150px;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: .2s ease;
+  border: 5px solid #881212;
+  margin-bottom: 40px; }
+
+.img-config:hover {
+  border-radius: 50%;
+  border: 5px solid #3c0505; }
+
+@media screen and (max-width: 800px) {
+  .social-btn {
+    display: flex;
+    flex-direction: column; }
+    .social-btn .btn-facebook {
+      width: 100%; }
+    .social-btn .btn-google {
+      margin-top: 20px;
+      width: 100%; } }
+/*****************************
+			CARGA
+****************************/
+#contenedor_carga {
+  background-color: #021223;
+  height: 100%;
   width: 100%;
-  text-align: center;
-  display: grid;
-  justify-content: center; }
-  .container-fluid .padding {
-    padding: 30px; }
-    .container-fluid .padding .margin-top h2 {
-      font-size: 30px; }
+  position: fixed;
+  transition: all 1s ease;
+  z-index: 10; }
+
+#logo {
+  width: 300px;
+  position: relative;
+  left: 50%;
+  bottom: 20%;
+  transform: translateX(-50%);
+  height: 500px;
+  margin: auto; }
+
+#carga {
+  border-top: 2px;
+  border-top-color: #f0351d;
+  border-top-style: ridge;
+  height: 100px;
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  -webkit-animation: girar 2s linear infinite;
+  -o-animation: girar 2s linear infinite;
+  animation: girar 2s linear infinite; }
+
+@keyframes girar {
+  from {
+    width: 0; }
+  to {
+    width: 50%; } }
+/**************************
+	FINAL DE CARGA
+************************/
+* {
+  padding: 0;
+  margin: 0; }
+
+.alertify-notifier {
+  font-size: 20px;
+  font-family: monospace; }
+
+#div-btn-under #btn-under {
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background-color: #14212d;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  box-shadow: 0px 1px 12px 1px rgba(0, 0, 0, 0.54);
+  outline: none;
+  cursor: pointer;
+  z-index: 5; }
+#div-btn-under i {
+  font-size: 20px; }
 
 /*# sourceMappingURL=import.css.map */
