--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,14 @@
   background-color: white;
   color: black;
   box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.5); }
-  .neightbor .navbar .collapse .form-inline .input {
-    box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.5); }
+  .neightbor .navbar .navbar-collapse .form-inline .input {
+    box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.2); }
+  .neightbor .navbar .navbar-collapse .form-inline #all-btn {
+    margin-left: 100px; }
+  .neightbor .navbar .navbar-collapse ul li a {
+    color: black; }
+
+.item-config {
+  background-color: rgba(32, 32, 32, 0.5); }
 
 /*# sourceMappingURL=navbar.css.map */
