--- a/sass/header.scss
+++ b/sass/header.scss
@@ -7,6 +7,9 @@
 		
 		.flex{
 			display: flex;
+			justify-content: center;
+			width: 100%;
+			text-align: center;
 
 			.btn-flex{
 				display: flex;
@@ -53,6 +56,31 @@
 					border-left: 3px solid rgba(255,255,255,0.64);
 				}
 			}
+
+			button{
+				padding: 20px;
+				margin-top: 50px;
+				width: 100%;
+				background-color: #f0351d;
+				color: white;
+				border: none;
+				border-left: 3px solid rgba(255,255,255,0.64);
+				border-right: 3px solid rgba(255,255,255,0.64);
+				outline: none;
+				cursor: pointer;
+				box-shadow: 0px 1px 20px 1px rgba(0,0,0,0.56);
+
+				label{
+					font-family: Arial;
+					text-transform: uppercase;
+					font-size: 18px;
+					cursor: pointer;
+				}
+			}
+
+			button:hover, label:hover{
+				background-color: #f0350d;
+			}
 		}
 
 		.skew-box{
@@ -81,31 +109,6 @@
 				font-weight: bold;
 				font-family: Arial;
 			}
-
-			button{
-				padding: 20px;
-				margin-top: 50px;
-				width: 100%;
-				background-color: #f0351d;
-				color: white;
-				border: none;
-				border-left: 3px solid rgba(255,255,255,0.64);
-				border-right: 3px solid rgba(255,255,255,0.64);
-				outline: none;
-				cursor: pointer;
-				box-shadow: 0px 1px 20px 1px rgba(0,0,0,0.56);
-
-				label{
-					font-family: Arial;
-					text-transform: uppercase;
-					font-size: 18px;
-					cursor: pointer;
-				}
-			}
-
-			button:hover, label:hover{
-				background-color: #f0350d;
-			}
 		}
 	}
 }
@@ -126,7 +129,6 @@
 				position: relative;
 				color: black;
 				transform: skew(-20deg);
-				left: 15%;
 				top: 20px;
 				display: grid;
 				align-items: end;
@@ -137,14 +139,16 @@
 					font-size: 2em;
 				}
 
-				button{
+				.read-more{
+					display: none;
+				}
+			}
+
+			.flex{
+
+				.btn-flex{
 					position: relative;
-					padding: 5px;
-					width: 100%;
-					
-					label{
-						font-size: 0.8em;
-					}
+					bottom: 30px;
 				}
 			}
 		}
